--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@
   letter-spacing: 3px;
 }
 
+.white h1{
+  color: #3b4a69;
+}
+
 *{
   box-sizing: border-box;
 }
@@ -77,6 +81,7 @@ a:hover{
 .img{
   height: 300px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  max-width: 100vw;
 
 }
 
@@ -112,7 +117,7 @@ main{
 
 .txt{
   width: 800px;
-  margin: 2rem;
+  margin: 1rem 0;
   font-size: 1.1rem;
   line-height: 25px;
   text-align: left;
