--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -21,7 +21,9 @@ textarea{
     height: 200px;
     resize: none;
     width: 100%;
-
+    padding: 10px;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #submit-btn{
