--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,9 @@ nav{
 #nav-logo{
   
   opacity: 0.9;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  max-width: 70vw;
+
 }
 
 a{
