--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,9 +1,16 @@
 form{
+    flex-direction: column;
+    position: relative;
+    width: 500px;
+    max-width: 100vw;
+    margin: 1rem auto;
+    padding: 1rem;
+}
+
+#contact{
     display: flex;
     flex-direction: column;
-    width: 500px;
-    max-width: 90vw;
-    margin: 1rem auto;
+    padding: 2rem 0;
 }
 
 input, select{
