--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,6 @@ a:hover{
   height: 300px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
   max-width: 100vw;
-
 }
 
 .flexwrap-container{
@@ -118,16 +117,15 @@ a:hover{
   align-items: center;
 }
 
-
 main{
   min-height: 100vh;
 }
 
 .blue{
   background-color: #3b4a69;
-  padding: 2rem;
   width: 100vw;
   display: flex;
+  padding: 1rem 0;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -137,7 +135,7 @@ main{
 
 .txt{
   width: 800px;
-  margin: 1rem 0;
+  padding: 2rem;
   font-size: 1.1rem;
   line-height: 25px;
   text-align: left;
@@ -153,6 +151,11 @@ text-transform: uppercase;
   height: 30px;
   margin: 0 0.5rem;
 }
+
+table{
+  max-width: 100vw;
+}
+
 td{
   color: white;
   padding: 10px;
@@ -178,6 +181,3 @@ footer{
   color: white;
 }
 
-#bookings{
-  
-}
