--- a/src/App.css
+++ b/src/App.css
@@ -170,9 +170,12 @@ footer{
     display: none;
   }
   a{
-    margin: 0.7rem;
+    margin: 0.6rem;
+    font-size: 0.6rem;
+
   }
   nav{
     justify-content: center;
+    padding: 0;
   }
 }
