--- a/src/App.css
+++ b/src/App.css
@@ -166,9 +166,11 @@ footer{
 
 
 @media only screen and (max-width: 600px) {
-  .social-icon{
+  #socials{
     display: none;
   }
+
+
   a{
     margin: 0.6rem;
     font-size: 0.6rem;
