--- a/src/App.css
+++ b/src/App.css
@@ -158,8 +158,10 @@ footer{
   height: 150px;
   background-color: #3b4a69;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
+  padding: 2rem;
   align-items: center;
   color: white;
 }
