--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+
+#gradient{
+  background-color: rgba(17,17,17,0.4);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .white h1{
@@ -62,6 +72,7 @@ nav{
   position: fixed;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
 
+  z-index: 999;
 }
 
 #about *{
@@ -70,10 +81,11 @@ nav{
 
 #nav-logo{
   
-  opacity: 0.9;
+opacity: 0.8;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-  max-width: 70vw;
+  max-height: 35%;
   border-radius: 3px;
+  z-index: 2;
 }
 
 a{
