--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,6 @@ html{
 nav{
   height: 75px;
   width: 100vw;
-  background-color: rgba(59, 74, 105, 0.9);
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -71,8 +70,6 @@ nav{
   align-items: center;
   padding: 1rem;
   position: fixed;
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
-
   z-index: 999;
 }
 
@@ -179,6 +176,76 @@ footer{
   padding: 2rem;
   align-items: center;
   color: white;
+}
+
+#hero{
+  position: relative;
+  display: flex;
+  flex: auto;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+ /* background-image: url('./assets/horse-small.png');*/
+  background-position: 15% 100%;
+  background-size: cover;
+  width: 100vw;
+  min-height: 95vh;
+}
+
+#btn{
+  background-color: #7a9b96;
+  color: white;
+  border: unset;
+  letter-spacing: 3px;
+  border-radius: 5px;
+  width: auto;
+  height: auto;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;  
+  font-weight: lighter !important;
+  font-size: 10px;
+  font-family: Minion;
+  padding: 10px;
+  text-transform: uppercase;
+
+}
+
+#horse-vid{
+
+  width: 100vw;
+  height: auto;
+  min-height: 95vh;
+  z-index: 0;
+  object-fit: cover;
+  object-position: 15% 100%;
+}
+
+#gradient{
+  background: rgba(237, 234, 228, 0.5);
+  background: linear-gradient(180deg, rgba(237, 234, 228, 0.5) 98%, rgba(237, 234, 228, 1) 100%);  
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+a{
+  margin: 0 10px;
+  font-size: 0.9rem;
+  color: #282c34;
+  text-decoration: none;
+  font-weight: bold
+}
+
+#hero-logo{
+  width: 350px;
+  max-width: 80vw;
 }
 
 
