--- a/src/App.css
+++ b/src/App.css
@@ -185,7 +185,7 @@ footer{
   justify-content: center;
   align-items: center;
   flex-direction: column;
- /* background-image: url('./assets/horse-small.png');*/
+  background-image: url('./assets/small-dog.png');
   background-position: 15% 100%;
   background-size: cover;
   width: 100vw;
