--- a/src/App.css
+++ b/src/App.css
@@ -32,15 +32,7 @@
   position: relative;
 }
 
-#gradient{
-  background-color: rgba(17,17,17,0.4);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-}
+
 
 .white h1{
   color: #3b4a69;
@@ -77,7 +69,9 @@ nav{
   color: #1e1e1e;
 }
 .white{
-  background-color: #edeae4;
+  /*background-color: #edeae4;*/
+  background-color: #fafafa;
+
 }
 
 #nav-logo{
@@ -221,7 +215,7 @@ footer{
 
 #gradient{
   background: rgba(237, 234, 228, 0.5);
-  background: linear-gradient(180deg, rgba(237, 234, 228, 0.5) 98%, rgba(237, 234, 228, 1) 100%);  
+  background: linear-gradient(to bottom, rgba(250, 250, 250, 0.5) 0%, rgba(250, 250, 250, 0.8) 90%, rgba(250, 250, 250, 1) 100%);  
   width: 100%;
   height: 100%;
   z-index: 2;
@@ -244,8 +238,8 @@ a{
 }
 
 #hero-logo{
-  width: 350px;
-  max-width: 80vw;
+  width: 300px;
+  max-width: 60vw;
 }
 
 
