--- a/src/App.css
+++ b/src/App.css
@@ -85,8 +85,8 @@ nav{
 a{
   color: white;
   text-transform: uppercase;
-  font-size: 0.7rem;
-  font-weight: 600;
+  font-size: 10px;
+  font-weight: bold;
   margin: 0 0.7rem;
   text-decoration: none;
 }
@@ -231,10 +231,10 @@ footer{
 
 a{
   margin: 0 10px;
-  font-size: 0.9rem;
+  font-size: 12px;
   color: #282c34;
   text-decoration: none;
-  font-weight: bold
+  font-weight: 900
 }
 
 #hero-logo{
